--- a/English-firmware/platformio.ini
+++ b/English-firmware/platformio.ini
@@ -614,7 +614,7 @@ build_flags       = ${common.build_flags}
   -IMarlin/src/HAL/HAL_STM32
 build_unflags     = -std=gnu++11
 extra_scripts     = pre:buildroot/share/PlatformIO/scripts/generic_create_variant.py
-lib_ignore        = Adafruit NeoPixel, TMCStepper, SailfishLCD, SailfishRGB_LED, SlowSoftI2CMaster, SoftwareSerial
+lib_ignore        = SailfishLCD, SailfishRGB_LED, 
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_STM32>
 
 
